--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -855,7 +855,7 @@
 @Url{dolezal,
     author  = "Z. Dole\v zal",
 	title = "Lecture notes: Vybran\' e kapitoly z urychlova\v cov\' e fyziky",
-	url = "http://www-ucjf.troja.mff.cuni.cz/~dolezal/teach/accel/"
+	url = "\hfil\break http://www-ucjf.troja.mff.cuni.cz/~dolezal/teach/accel/"
 }
 
 @Book{wiedemann,
@@ -1038,7 +1038,7 @@
 	  ISBN="0-19-859680-4"
 }
 
-@book{bock,
+@Book{bock,
       author       = "Bock, R. K. and Grote, H and Notz, D and Regler,
                       Meinhard",
       title        = "Data-analysis techniques for high-energy physics
@@ -1049,7 +1049,7 @@
 		ISBN	   = "0-521-63548-9"
 }
 
-@book{lemieux,
+@Book{lemieux,
       author       = "Lemieux, Christiane",
       title        = "Monte Carlo and Quasi-Monte Carlo Sampling",
       publisher    = "Springer",
@@ -1080,4 +1080,21 @@
       publisher    = "Cambridge University Press",
       address      = "Leiden",
       year         = "2010",
+}
+
+@Url{hepmc,
+	title = "The HepMC home page",
+	url = "http://lcgapp.cern.ch/project/simu/HepMC/"
+}
+
+
+@Url{millepede,
+	author = "Blobel, V."
+	title = "Millepede II: The Manual ",
+	url = "http://www.desy.de/~blobel/Mptwo.pdf"
+}
+
+@Url{root matrix,
+	title = "Linear Algebra in ROOT",
+	url = "ftp://root.cern.ch/root/doc/14LinearAlgebra.pdf"
 }
