--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -22,7 +22,7 @@
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1cm
 \else
-	\def\FootText{(VERSION 6)}
+	\def\FootText{(VERSION 7)}
 \fi
 
 \def\pmt#1{\hbox{\tt #1}}
@@ -110,7 +110,7 @@
 \DefAbb{TPE}{Two Photon Exchange}{An approximation in QED.}
 \DefAbb{WY}{West-Yennie}{Refers to the Coulomb-interference formula Eq.~\ref{el phase WY}.}
 
-% Eq., Tab. -> Tb., Fig. -> Fg., Sc. + Ch.
+% Eq., Tb., Fg. (+Fgs, ...), Sc. + Ch.
 
 \PrintAbbreviations
 
