--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -19,6 +19,8 @@ HOW (detectors): This challenging program brings special requirements for the de
 
 \TODO{acceptance overview plot? Our acceptance starts where CMS stops}
 
+\section[ttm det]{Detector apparatus}
+
 \> brief description of T1 and T2 with a few pictures
 \>> reference to more detailed information: \bref{totem04,totem08,totem10}
 
@@ -209,7 +211,7 @@ islam_bfkl, 9E-01, 3E-01, 2E-02, 1E-03, 3E-04
 Ci --> Ui --> corr(i) = Ci/Ui --> C(i+1) = U0 * corr(i) and again unless |C(i+1) - C(i)| < threshold
 
 \> a very old extrapolation study, unpublished, before OfflineSW existed
-\>> no G4 simulation, however simulation of beam smearing as in \Sc{beam smearing} and simulation of detector resolution similar to the one in \bref{fast simu}
+\>> no G4 simulation, however simulation of beam smearing as in \Sc{beam smearing} and simulation of detector resolution similar to the one in \Sc{fast simu}
 \>> proton transport with a parameterized optics \TODO{ref}
 \>> realistic statistics (1 day of data-taking at a realistic luminosity)
 
